--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "mssql": "^3.3.0",
+        "mysql": "^2.16.0",
+        "sql": "^0.78.0"
     }
 }
