--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "dependencies": {
         "body-parser": "^1.18.3",
+        "datatables.net": "^1.10.19",
+        "datatables.net-dt": "^1.10.19",
         "easy-autocomplete": "^1.3.5",
         "express": "^4.16.4",
         "jquery.js": "0.0.2-security",
