--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "easy-autocomplete": "^1.3.5",
         "express": "^4.16.4",
         "jquery.js": "0.0.2-security",
+        "jsonwebtoken": "^8.4.0",
         "mssql": "^3.3.0",
         "mysql": "^2.16.0",
         "sql": "^0.78.0"
