session_start + authorization

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jsonwebtoken": "^8.4.0",
         "mssql": "^3.3.0",
         "mysql": "^2.16.0",
+        "nodemon": "^1.18.9",
         "sql": "^0.78.0"
     }
 }
